<resources>
    <string name="app_name">LouiseDroidBurger</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="adress">Adresse</string>
    <string name="validate">Validate</string>
    <string name="shipping_time">Shipping time</string>
    <string name="merci_pour_ta_commande">Merci pour ta commande</string>
    <string name="firstname">FirstName</string>
    <string name="r_capitulatif">Récapitulatif :</string>
    <string name="nom">Nom :</string>
    <string name="adresse_title">Adresse :</string>
    <string name="heure_de_livraison">Heure de livraison :</string>
    <string name="t_l_phone">Téléphone :</string>
    <string name="confirmer">Confirmer</string>
=    <string-array name="burger_list">
        <item>Burger du chef</item>
        <item>Cheeseburger</item>
        <item>Burger Montagnard</item>
        <item>Burger Italien</item>
        <item>Burger Vegétarien</item>
    </string-array>
</resources>