<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7FFFE"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/droid_burger_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/droid_burger_logo" />

    <EditText
        android:id="@+id/nameTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/droid_burger_logo" />

    <EditText
        android:id="@+id/firstNameTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/first_name"
        app:layout_constraintEnd_toEndOf="@+id/nameTextBox"
        app:layout_constraintStart_toStartOf="@+id/nameTextBox"
        app:layout_constraintTop_toBottomOf="@+id/nameTextBox" />

    <EditText
        android:id="@+id/addressTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:hint="@string/adresse"
        app:layout_constraintEnd_toEndOf="@+id/firstNameTextBox"
        app:layout_constraintStart_toStartOf="@+id/firstNameTextBox"
        app:layout_constraintTop_toBottomOf="@+id/firstNameTextBox" />

    <Spinner
        android:id="@+id/burgerChoiceSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:popupBackground="@color/blue_droid"
        app:layout_constraintEnd_toEndOf="@+id/phoneEditText"
        app:layout_constraintStart_toStartOf="@+id/phoneEditText"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />

    <Button
        android:id="@+id/validateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/confirmer"
        android:textColor="@color/pink_droid"
        app:layout_constraintEnd_toEndOf="@+id/pickTimeButton"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/pickTimeButton"
        app:layout_constraintTop_toBottomOf="@+id/pickTimeButton" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="Phone number"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/addressTextBox"
        app:layout_constraintStart_toStartOf="@+id/addressTextBox"
        app:layout_constraintTop_toBottomOf="@+id/addressTextBox" />

    <TextView
        android:id="@+id/pickTimeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/bungee"
        android:text="Heure de livraison"
        android:textAlignment="center"
        android:textColor="@color/pink_droid"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/burgerChoiceSpinner"
        app:layout_constraintStart_toStartOf="@+id/burgerChoiceSpinner"
        app:layout_constraintTop_toBottomOf="@+id/burgerChoiceSpinner" />

    <TextView
        android:id="@+id/timeChoice"
        android:layout_width="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:fontFamily="@font/berkshire_swash"
        android:textSize="20sp"
        android:text="Heure :"
        app:layout_constraintEnd_toEndOf="@+id/pickTimeButton"
        app:layout_constraintStart_toStartOf="@+id/pickTimeButton"
        app:layout_constraintTop_toBottomOf="@+id/pickTimeButton" />

</androidx.constraintlayout.widget.ConstraintLayout>